--- a/TODO
+++ b/TODO
@@ -7,3 +7,4 @@ TODO ... the neverending list
 ------------------------------------------------------------------------------
 - Clean up all code TODOs
 - Proper debugging system with bitwise levels
+- Create test user
